# snake-in-rust

./: .gitignore  Cargo.toml  Make-Appx.ps1  MappingFile.txt  README.md
.github/workflows/: rust.yml
assets/: AppxManifest.xml
src/: main.rs
src/game_objects/: apple.rs  constants.rs  snake.rs
